# ReTOSCA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  retosca-docker.sh  run-retosca.sh
.github/workflows/: ci.yaml  ci.yml
examples/: async-clout.yaml  async.yaml  clout.yaml
examples/advanced/count/: main.tf
examples/advanced/inputs/: main.tf  variables.tf
examples/advanced/list/: main.tf
examples/advanced/list_test/: main.tf  variables.tf
examples/advanced/loops/: main.tf
examples/advanced/outputs/: main.tf
examples/advanced/route53_zones/: main.tf
examples/basic/aws_db_instance/: main.tf
examples/basic/aws_ebs_volume/: main.tf
examples/basic/aws_elasticache_replication_group/: main.tf
examples/basic/aws_instance/: main.tf
examples/basic/aws_internet_gateway/: main.tf
examples/basic/aws_lb_target_group/: main.tf
examples/basic/aws_nat_gateway/: main.tf
examples/basic/aws_rds_cluster/: main.tf
examples/basic/aws_route53_record/: main.tf
examples/basic/aws_route53_zone/: main.tf
examples/basic/aws_s3_bucket/: main.tf
examples/basic/aws_security_group/: main.tf
examples/basic/aws_subnet/: main.tf
examples/basic/aws_vpc/: main.tf
examples/composed/aws_compute_sg/: main.tf
examples/composed/aws_compute_storage/: main.tf
examples/composed/aws_compute_subnet/: main.tf
examples/composed/aws_elasticache_subnet_group/: main.tf
examples/composed/aws_lb/: main.tf
examples/composed/aws_lb_listener/: main.tf
examples/composed/aws_lb_target_group_attachment/: main.tf
examples/composed/aws_route/: main.tf
examples/composed/aws_route_table/: main.tf
examples/composed/aws_storage_subnet_sg/: main.tf
examples/mvc/: main.tf
scripts/: test-tosca.sh
src/: main.py
src/clout_to_ir/: __init__.py  conversion_pipeline.py  exceptions.py  playground.py
src/clout_to_ir/conversion/: __init__.py  base_converter.py  converter.py  node_converter.py  relationship_converter.py
src/clout_to_ir/conversion/helpers/: attribute_converter.py  capability_converter.py  requirement_converter.py
src/clout_to_ir/conversion/inference/: base_rule.py  category_inference.py  type_rule.py
src/clout_to_ir/io/: file_loader.py  loader_factory.py
src/clout_to_ir/mapping/: __init__.py  attributes.py  base_strategy.py  capabilities.py  nodes.py  primitives.py  relationships.py  requirements.py  strategy_factory.py
src/clout_to_ir/mapping/inference/: __init__.py  capability_rule.py  category_inference.py
src/core/: pipeline_runner.py  plugin_registry.py  protocols.py
src/core/common/: __init__.py  base_mapper.py  base_orchestrator.py  base_parser.py  base_phase_plugin.py
src/ir/: models.py
src/models/v2_0/: __init__.py  artifact_definition.py  base_tosca.py  builder.py  capability_assignment.py  group_definition.py  interface_assignment.py  node_template.py  operation_or_notification_assignment.py  parameter_definition.py  policy_definition.py  requirement_assignment.py  service_template.py  tosca_file.py  trigger_definition.py  workflow_definition.py
src/plugins/: __init__.py  terraform
src/plugins/provisioning/terraform/: __init__.py  context.py  exceptions.py  parser.py  terraform_plugin.py  variables.py
src/plugins/provisioning/terraform/mappers/aws/: aws_db_instance.py  aws_db_subnet_group.py  aws_ebs_volume.py  aws_eip.py  aws_elasticache_cluster.py  aws_elasticache_replication_group.py  aws_elasticache_subnet_group.py  aws_iam_policy.py  aws_iam_role.py  aws_instance.py  aws_internet_gateway.py  aws_lb.py  aws_lb_listener.py  aws_lb_target_group.py  aws_lb_target_group_attachment.py  aws_nat_gateway.py  aws_rds_cluster.py  aws_route.py  aws_route53_record.py  aws_subnet.py  (+11 more)
src/plugins/terraform/: __init__.py  context.py  exceptions.py  mapper.py  orchestrator.py  parser.py  terraform_mapper_base.py  variables.py
src/plugins/terraform/mappers/aws/: aws_db_instance.py  aws_db_subnet_group.py  aws_ebs_volume.py  aws_eip.py  aws_elasticache_cluster.py  aws_elasticache_replication_group.py  aws_elasticache_subnet_group.py  aws_iam_policy.py  aws_iam_role.py  aws_instance.py  aws_internet_gateway.py  aws_lb.py  aws_lb_listener.py  aws_lb_target_group.py  aws_lb_target_group_attachment.py  aws_nat_gateway.py  aws_rds_cluster.py  aws_route.py  aws_route53_record.py  aws_route53_zone.py  aws_route_table.py  aws_route_table_association.py  aws_s3_bucket.py  aws_security_group.py  aws_subnet.py  aws_volume_attachment.py  aws_vpc.py  aws_vpc_ipv4_cidr_block_association.py  aws_vpc_security_group_egress_rule.py  aws_vpc_security_group_ingress_rule.py
tests/unit/: test_ir.py  test_ir_models.py
tests/unit/core/common/: test_base_mapper.py  test_base_orchestrator.py  test_base_parser.py
tests/unit/models/v2_0/: __init__.py  test_artifact_definition.py  test_aws_db_subnet_group.py  test_aws_route_table_association.py  test_base_tosca.py  test_builder.py  test_capability_assignment.py  test_group_definition.py  test_interface_assignment.py  test_node_template.py  test_operation_or_notification_assignment.py  test_parameter_definition.py  test_policy_definition.py  test_requirement_assignment.py  test_service_template.py  test_tosca_file.py  test_trigger_definition.py  test_workflow_definition.py
tests/unit/plugins/terraform/: test_context.py  test_mapper.py  test_orchestrator.py  test_parser.py  test_variables.py
tests/unit/plugins/terraform/aws/: test_aws_security_group.py  test_aws_subnet.py
(+30 files in other folders)
